--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -16,7 +16,7 @@ collections:
         - {label: "Content Type", name: "contentType", widget: "hidden", default: "blog_post"}
         - {label: "PostCardImage", name: "postCardImage", widget: image, required: false}
         - {label: "Publish Date", name: "date", widget: "date"}
-        - {label: "Tags Selector", name: "tags", widget: "select", options: ["Espionage", "TipsTricks, "Ideas"], required: true}
+        - {label: "Tags Selector", name: "tags", widget: "select", options: ["Espionage","TipsTricks,"Ideas"]}
         - {label: "Tag", name: "tag", widget: "list", required: false}
         - {label: Author, name: author, widget: hidden, default: Chris Stayte}
         - {label: Author Image, name: authorImage, widget: image, default: "uploads/drop-logo1.png", required: false}
