--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -16,7 +16,10 @@ collections:
         - {label: "Content Type", name: "contentType", widget: "hidden", default: "blog_post"}
         - {label: "PostCardImage", name: "postCardImage", widget: image, required: false}
         - {label: "Publish Date", name: "date", widget: "date"}
-        - {label: "Tags Selector", name: "tags", widget: "select", options: - { label: "Chicago", value: "ORD" } - { label: "Paris", value: "CDG" } - { label: "Tokyo", value: "HND" }}
+        - label: "Align Content"
+          name: "align"
+          widget: "select"
+          options: ["left", "center", "right"]
         - {label: "Tag", name: "tag", widget: "list", required: false}
         - {label: Author, name: author, widget: hidden, default: Chris Stayte}
         - {label: Author Image, name: authorImage, widget: image, default: "uploads/drop-logo1.png", required: false}
