--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -12,21 +12,18 @@ collections:
       create: true
       slug: '{{year}}-{{month}}-{{day}}-{{slug}}'
       fields:
-        - {label: "Title", name: "title", widget: "string", required: true}
+        - {label: "1. Add a title", name: "title", widget: "string", required: true}
         - {label: "Content Type", name: "contentType", widget: "hidden", default: "blog_post"}
-        - {label: "PostCardImage", name: "postCardImage", widget: image, required: false}
-        - {label: "Publish Date", name: "date", widget: "date"}
-        - label: "Align Content"
-          name: "align"
+        - {label: "2. Add posts main,big image", name: "postCardImage", widget: image, required: false}
+        - {label: "3. Date you publising", name: "date", widget: "date"}
+        - label: "4. You must select one category"
+          name: "category"
           widget: "select"
-          options: ["left", "center", "right"]
-        - {label: "Tag", name: "tag", widget: "list", required: false}
-        - {label: Author, name: author, widget: hidden, default: Chris Stayte}
+          options: ["Ideas", "Galaxy Fun", "About Me", "Espionage", "Tips&Tricks", "Ship Designs", "Station Design", "Galaxy War", "Special Event"]
+        - {label: 5. Your nickname as an Author, name: author, widget: "string", default: Dropper}
         - {label: Author Image, name: authorImage, widget: image, default: "uploads/drop-logo1.png", required: false}
-        - {label: Commenting, name: comments, widget: boolean, default: true}
-        - {label: Sharing, name: share, widget: boolean, default: true}
         - {label: Type, name: type, widget: hidden, default: "post"}
-        - {label: "Body", name: "body", widget: "markdown"}
+        - {label: "6. Now write your post, to add images tap on '+' button below", name: "body", widget: "markdown"}
     - name: "life"
       label: "Life Post"
       folder: "src/posts/life"
