--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "lodash": "^4.17.4",
     "prop-types": "latest",
     "react": "^16.4.1",
-    "react-dom": "latest"
+    "react-dom": "latest",
+    "react-share": "^2.2.0"
   },
   "homepage": "https://www.drop-your-shield.com",
   "keywords": [
