--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "@material-ui/core": "^1.4.0",
     "@material-ui/icons": "^1.1.0",
     "disqus-react": "^1.0.5",
-    "gatsby": "^1.9.235",
+    "gatsby": "^1.9.277",
     "gatsby-image": "^1.0.42",
-    "gatsby-link": "^1.6.39",
+    "gatsby-link": "^1.6.46",
     "gatsby-plugin-catch-links": "^1.0.24",
     "gatsby-plugin-google-analytics": "^1.0.24",
     "gatsby-plugin-react-helmet": "^1.0.8",
@@ -23,7 +23,7 @@
     "lodash": "^4.17.4",
     "prop-types": "latest",
     "react": "^16.4.1",
-    "react-dom": "latest",
+    "react-dom": "^16.4.0",
     "react-share": "^2.2.0"
   },
   "homepage": "https://www.drop-your-shield.com",
